plugins/xpath/xpath-lang/testData/xpath2/highlighting/types/timeMinusDate.xpath2
current-time() - <error descr="Expected type 'one of xs:time, xs:duration', got 'xs:date'">current-date()</error>